fix: side nav covering content

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,17 @@ body {
     border-radius: 50rem;
 }
 
+.wrapper {
+    width: 100%;
+}
+
+@media screen and (min-width: 992px) {
+    .wrapper {
+        width: 70%;
+        margin: 0 auto;
+    }
+}
+
 /*-----------------------------------------------------------------------------
  * Nav 
  *-----------------------------------------------------------------------------*/
